<resources>
    <string name="app_name">IKARUS mobile.security</string>
    <string name="app_name_launcher">IKARUS</string>
    <string name="NativeLanguageName">English</string>
    <string name="about_antispam_engine">AntiSPAM engine</string>
    <string name="about_database">Database</string>
    <string name="about_license_ikarus_lite">"This license expires on %1$s.

The serial number is %2$s."</string>
    <string name="about_license_ikarus_lite_basic">You are using the free version of the app.</string>
    <string name="about_license_ikarus_lite_basic_prominent_upgrade">Your license has expired. You can continue to use the basic features of the free version.</string>
    <string name="about_license_ikarus_lite_date_format">MMM dd, yyyy</string>
    <string name="about_license_ikarus_lite_trial">"The trial license expires on %1$s.

The serial number is %2$s."</string>
    <string name="about_scan_engine">Scan engine</string>
    <string name="acquiring_trial">Activating trial license...</string>
    <string name="activation_qr_code_false_text">An incorrect QR code was scanned. Please try again.</string>
    <string name="activation_qr_code_scan_button_text">Scan QR code</string>
    <string name="activation_qr_code_scan_description">Scan your QR code with the camera.</string>
    <string name="add_blacklist_contact">Add</string>
    <string name="alarm_preference">Trigger alarm signal on device</string>
    <string name="alarm_title">Trigger alarm</string>
    <string name="answersms_button">Edit answer text</string>
    <string name="answersms_hint">Enter text for automatic reply:</string>
    <string name="answersms_preference">Send automatic answer</string>
    <string name="answersms_savebutton">Save</string>
    <string name="answersms_title">Answer text message</string>
    <string name="anti_virus_main_screen_button_scan_progress">Scanning...</string>
    <string name="anti_virus_main_screen_button_update_progress">Updating...</string>
    <string name="automatic_scans_enabled">Enable automatic scans</string>
    <string name="automatic_updates_enabled">Enable automatic updates</string>
    <string name="blacklist_add_hint">Enter name or phone number</string>
    <string name="blacklist_contact_no_phone_number">No telephone number</string>
    <string name="blacklist_default_sms_response">Your text message could not be sent. IKARUS mobile.security blocked your message.</string>
    <string name="blacklist_no_name">Unknown number</string>
    <string name="boolean_preference_disable">Disable</string>
    <string name="boolean_preference_enable">Enable</string>
    <string name="btn_accept_licence">Accepted</string>
    <string name="btn_change_password">Change password</string>
    <string name="btn_next">Continue</string>
    <string name="button_app_only_scan">Start App Scan</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_full_scan">Start Full Scan</string>
    <string name="button_infections">Show and edit infections</string>
    <string name="button_infections_hide">Hide infections</string>
    <string name="button_initial_update_cancel">Cancel</string>
    <string name="button_initial_update_continue">Continue</string>
    <string name="button_initial_update_start">Start</string>
    <string name="button_log">Send system log</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_remove_from_quarantine">Delete</string>
    <string name="button_show_storage_dump">Show Settings</string>
    <string name="button_update_now">Update now</string>
    <string name="button_yes">Yes</string>
    <string name="change_password_label_old">Old IKARUS password:</string>
    <string name="checking_for_existing_license">Checking for existing license...</string>
    <string name="create_password_enter">Please choose your personal IKARUS password, which you need to use theft-protection features:</string>
    <string name="create_password_title">IKARUS Password</string>
    <string name="demoversion_button">Activate trial license</string>
    <string name="demoversion_hint">Test full version for 30 days for free</string>
    <string name="demoversion_title">Activate Trial Version</string>
    <string name="disabled_telephony_not_available">The feature is disabled because the device has no telephony feature.</string>
    <string name="elecom_activation_description">Enter your activation code.</string>
    <string name="elecom_activation_title">Product Activation</string>
    <string name="elecom_button_help">Help</string>
    <string name="elecom_get_activation_code_url">http://appstore.elecom.co.jp/ikarus/update_license.html</string>
    <string name="elecom_get_activation_code_url_new_license">http://appstore.elecom.co.jp/ikarus/new_license.html</string>
    <string name="elecom_get_activation_code_url_trial_license">http://appstore.elecom.co.jp/ikarus/new_license.html</string>
    <string name="elecom_get_serial">No activation code?</string>
    <string name="elecom_html_remote">&lt;html>&lt;head>&lt;meta http-equiv=\"content-type\" content=\"text/html;charset=utf-8\" />&lt;title>IKARUS mobile security&lt;/title>&lt;/head>&lt;body>&lt;div id=\"ikarus-mobile-security\">&lt;div>&lt;div>&lt;div>&lt;h2 style=\"color:#D43219\">Remote Control &amp; Theft Protection&lt;/h2>&lt;/div>&lt;/div>&lt;p>IKARUS mobile.security offers features to control your device even if it is lost or stolen:&lt;p/>Using simple text message commands sent from any other mobile phone, you can locate or lock your device, wipe out your personal data or raise an alarm. If you activate this feature, you may be asked to grant IKARUS mobile.security some additional system rights.&lt;/p>&lt;p>&lt;img alt=\"remote\" style=\"max-width:100%\" src=\"file:///android_asset/wizard/images/remote.png\" height=\"196\" width=\"336\" />&lt;/p>&lt;/div>&lt;/div>&lt;/body>&lt;/html></string>
    <string name="heading_infections">Infections</string>
    <string name="heading_scan">Scan</string>
    <string name="heading_update">Update</string>
    <string name="inappbuy_button">Via Google Play</string>
    <string name="inappbuy_hint">Activate license with no time limit on Google Play</string>
    <string name="inappbuy_title">Via Google Play</string>
    <string name="information_answersms_body">Inform senders that their message was rejected. Choose any text for the automatic reply.</string>
    <string name="information_answersms_header">Automatic reply</string>
    <string name="information_inappbuy_body">When purchasing on Google Play, you receive a full version with no time limit which includes all additional security features.</string>
    <string name="information_inappbuy_header">Google Play</string>
    <string name="information_infection_body">This list shows you which files on your device have been infected by a virus. You can delete the files or send them to the IKARUS laboratory for further analysis.</string>
    <string name="information_infection_header">Infections on your device</string>
    <string name="information_observation_apps_body">New or updated apps are monitored in the background. When an app is downloaded or upgraded, a scan is started automatically to check the app for malware.</string>
    <string name="information_observation_apps_header">Monitoring app installations</string>
    <string name="information_observation_sdcard_body">File access is monitored in the background. Files on the SD card or on the internal storage, such as Internet downloads, are automatically checked for malware.</string>
    <string name="information_observation_sdcard_header">File monitoring</string>
    <string name="information_scan_body_without_scheduling">An app scan covers only the apps installed on the device, while the full scan also scans the memory card.</string>
    <string name="information_scan_header">Virus scanning</string>
    <string name="information_smsblacklist_body">Text messages from blacklisted phone numbers are automatically deleted. Choose phone numbers from the address book or from recently received messages.</string>
    <string name="information_smsblacklist_header">Deleting undesired messages</string>
    <string name="information_update_body">Our virus detection mechanism is adapted to the current threat situation and updated with the latest virus definitions on an ongoing basis. Therefore, regular updates - manual or under time control - increase your security.</string>
    <string name="information_update_header">Database updates</string>
    <string name="information_upgradecode_body">With activation codes, you can choose between flexible license terms for the upgrade to the full version.</string>
    <string name="information_upgradecode_header">Activation codes</string>
    <string name="information_ussd_body">The USSD protection prevents the execution of USSD control codes that can harm your device or make it unusable. USSD codes look like phone numbers but instead execute code on your device.</string>
    <string name="information_ussd_header">USSD codes</string>
    <string name="label_confirm_password">Confirm new password:</string>
    <string name="label_password">New password:</string>
    <string name="license_choice_screen_lite_description">Buy the full version with theft protection, message blacklist and URL filter</string>
    <string name="license_choice_screen_lite_skip">Skip and use the free version</string>
    <string name="license_choice_screen_lite_title">Upgrade to full version?</string>
    <string name="main_menu_anti_virus">AntiVirus</string>
    <string name="main_menu_info">Info</string>
    <string name="main_menu_observation">Monitoring</string>
    <string name="main_menu_sms_filter">Message Blacklist</string>
    <string name="main_menu_theft_protection">Theft Protection</string>
    <string name="main_menu_uninstall">Uninstall</string>
    <string name="main_menu_upgrade">Upgrade</string>
    <string name="main_menu_web_filter">URL Filter</string>
    <string name="main_menu_wizard">Restart Setup</string>
    <string name="observate_apps_preference">Monitor apps</string>
    <string name="observate_apps_title">Monitoring of all apps</string>
    <string name="observate_sdcard_preference">Monitor files</string>
    <string name="observate_sdcard_title">Monitoring of files</string>
    <string name="observation_screen_warning">IKARUS cannot protect you if this feature is disabled!</string>
    <string name="password_requirements">6 to 15 characters, aA–zZ and 0–9, at least one number and one letter.</string>
    <string name="setup_buy_google_full_infoline">Buy license for full version with no time limit on Google Play</string>
    <string name="setup_buy_google_full_title">Upgrade via Google Play</string>
    <string name="setup_buy_ikarus_demo_infoline">Test full feature set for 30 days</string>
    <string name="setup_buy_ikarus_demo_title">Trial Version</string>
    <string name="setup_buy_ikarus_full_infoline">Choose between flexible license models</string>
    <string name="setup_buy_ikarus_full_title">Upgrade using an activation code</string>
    <string name="show_password_in_cleartext">Show password</string>
    <string name="smsblacklist_button">Edit Blacklist</string>
    <string name="smsblacklist_preference">Reject messages according to the blacklist</string>
    <string name="smsblacklist_title">Message Blacklist</string>
    <string name="upgradecode_button">Enter / scan activation code</string>
    <string name="upgradecode_hint">Choose between flexible license models</string>
    <string name="upgradecode_title">Upgrade using an activation code</string>
    <string name="ussd_preference_body">Block USSD control codes</string>
    <string name="ussd_title">USSD Protection</string>
</resources>