<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/IkarusRootLayoutMobile"
  xmlns:ikarus="http://schemas.android.com/apk/res/com.ikarus.mobile.security"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.ikarus.mobile.security.view.IkarusTitleWithHelp android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" ikarus:help_text="@string/information_upgradecode_body" ikarus:help_title="@string/information_upgradecode_header" ikarus:title_text="@string/upgradecode_title" />
        <Button android:id="@id/buttonIkarusActivationCode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/upgradecode_button" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/upgradecode_hint" />
        <com.ikarus.mobile.security.view.IkarusTitleWithHelp android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" ikarus:help_text="@string/information_inappbuy_body" ikarus:help_title="@string/information_inappbuy_header" ikarus:title_text="@string/inappbuy_title" />
        <Button android:id="@id/buttonGoogle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/inappbuy_button" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inappbuy_hint" />
    </LinearLayout>
</ScrollView>