<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" style="@style/IkarusRootLayoutMobile"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ikarus="http://schemas.android.com/apk/res/com.ikarus.mobile.security">
    <ScrollView android:orientation="vertical" android:padding="@dimen/separator_spacing" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_marginTop="10.0dip" android:text="@string/license_choice_screen_lite_title" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/license_choice_screen_lite_description" />
            <com.ikarus.mobile.security.productspecific.lite.LicenseScreenItem android:layout_width="wrap_content" android:layout_height="wrap_content" ikarus:caption="@string/setup_buy_ikarus_full_title" ikarus:description="@string/setup_buy_ikarus_full_infoline" ikarus:onClick="useIkarusStore" />
            <com.ikarus.mobile.security.productspecific.lite.LicenseScreenItem android:layout_width="wrap_content" android:layout_height="wrap_content" ikarus:caption="@string/setup_buy_google_full_title" ikarus:description="@string/setup_buy_google_full_infoline" ikarus:onClick="useGoogleStore" />
            <com.ikarus.mobile.security.productspecific.lite.LicenseScreenItem android:layout_width="wrap_content" android:layout_height="wrap_content" ikarus:caption="@string/setup_buy_ikarus_demo_title" ikarus:description="@string/setup_buy_ikarus_demo_infoline" ikarus:onClick="useTrial" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/license_choice_screen_lite_skip" android:onClick="onSkipButtonClicked" />
    </LinearLayout>
</LinearLayout>