<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ikarus="http://schemas.android.com/apk/res/com.ikarus.mobile.security">
    <ScrollView style="@style/IkarusRootLayoutMobile">
        <LinearLayout android:orientation="vertical" android:id="@id/layoutMain" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.ikarus.mobile.security.view.IkarusTitleWithHelp android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" ikarus:help_text="@string/information_smsblacklist_body" ikarus:help_title="@string/information_smsblacklist_header" ikarus:title_text="@string/smsblacklist_title" />
            <com.ikarus.mobile.security.preference.frontend.IkarusCheckBoxPreference android:id="@id/smsblacklistid" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" ikarus:preference_key="blacklistActive" ikarus:preference_text="@string/smsblacklist_preference" ikarus:preference_small="true" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/buttonSmsblacklist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/smsblacklist_button" />
                <LinearLayout android:orientation="vertical" android:id="@id/list" android:background="@drawable/heading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <AutoCompleteTextView android:id="@id/blacklistContactPickerTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/blacklist_add_hint" android:inputType="text" />
                        <Button android:id="@id/buttonNew" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_blacklist_contact" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lastBlacklistEditTextview" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/answerButtonEditGroup" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.ikarus.mobile.security.view.IkarusTitleWithHelp android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" ikarus:help_text="@string/information_answersms_body" ikarus:help_title="@string/information_answersms_header" ikarus:title_text="@string/answersms_title" />
                <com.ikarus.mobile.security.preference.frontend.IkarusCheckBoxPreference android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" ikarus:preference_key="smsAction" ikarus:preference_text="@string/answersms_preference" ikarus:preference_change_handling="SmsCostWarning" ikarus:preference_small="true" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:id="@id/buttonAnswersms" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/answersms_button" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lastAnswersmsEditTextview" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/answersmsView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                    <EditText android:id="@id/editAnswersmsEdittext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/answersms_hint" android:minLines="4" android:inputType="textMultiLine" />
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <Button android:id="@id/editAnswersmsButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/answersms_savebutton" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>