<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/IkarusRootLayoutMobile"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/changePassword" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/change_password_label_old" />
        <EditText android:id="@id/editTextPasswordOld" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_password" />
        <EditText android:id="@id/editTextPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <CheckBox android:enabled="true" android:textSize="12.0sp" android:id="@id/cbShowPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/show_password_in_cleartext" />
        <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_requirements" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/label_confirm_password" />
        <EditText android:id="@id/editTextPassword2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword" />
        <Button android:id="@id/btn_change" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_ok" />
    </LinearLayout>
</ScrollView>